--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
-    "html-webpack-plugin": "^2.16.2"
+    "html-webpack-plugin": "^2.16.2",
+    "react-hot-loader": "^1.3.0"
   }
 }
