--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "react-dom": "^15.0.2",
     "react-redux": "^4.4.5",
     "redux": "^3.5.2",
+    "redux-logger": "^2.6.1",
+    "redux-thunk": "^2.1.0",
     "webpack": "^1.13.0",
     "webpack-dev-server": "^1.14.1"
   },
